deployments/kitter-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kitter-backend-service
spec:
  selector:
    app: kitter-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
  type: ClusterIP
