deployments/kitter-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kitter-frontend-service
spec:
  selector:
    app: kitter-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
  type: LoadBalancer
